SLangCompilier/SLangGrammar/SLGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from SLGrammar.g4 by ANTLR 4.6.5

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace SLangGrammar {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.5")]
[System.CLSCompliant(false)]
public partial class SLGrammarParser : Parser {
	public const int
		Colon=1, Semicolon=2, Comma=3, Point=4, Variable=5, Const=6, Length=7, 
		Let=8, Return=9, Input=10, Output=11, Call=12, Readonly=13, If=14, Then=15, 
		Else=16, While=17, Repeat=18, Elseif=19, Do=20, AddOp=21, SubOp=22, MulOp=23, 
		DivOp=24, ModOp=25, BoolOr=26, BoolAnd=27, BoolEq=28, BoolNeq=29, BoolG=30, 
		BoolL=31, BoolGeq=32, BoolLeq=33, BoolNot=34, ModuleToken=35, ImportToken=36, 
		Start=37, End=38, Function=39, Procedure=40, LBrace=41, RBrace=42, LSBrace=43, 
		RSBrace=44, LABrace=45, RABrace=46, AssignToken=47, New=48, Nil=49, Pointer=50, 
		ArrayToken=51, FunctionArgModifier=52, AccessModifier=53, Class=54, Inherit=55, 
		Base=56, Abstract=57, Override=58, File=59, Uses=60, SimpleType=61, IntValue=62, 
		RealValue=63, BoolValue=64, Id=65, StringLiteral=66, Comment=67, Ws=68;
	public const int
		RULE_typeName = 0, RULE_ptrType = 1, RULE_customType = 2, RULE_scalarType = 3, 
		RULE_simpleType = 4, RULE_arrayType = 5, RULE_arrayDimention = 6, RULE_start = 7, 
		RULE_moduleImportList = 8, RULE_moduleImport = 9, RULE_module = 10, RULE_moduleDeclare = 11, 
		RULE_baseHead = 12, RULE_inheritHead = 13, RULE_classDeclare = 14, RULE_classStatements = 15, 
		RULE_methodDeclare = 16, RULE_thisHeader = 17, RULE_methodFuncAbstract = 18, 
		RULE_methodProcAbstract = 19, RULE_methodFuncDeclare = 20, RULE_methodProcDeclare = 21, 
		RULE_fieldDeclare = 22, RULE_importHeader = 23, RULE_functionDeclare = 24, 
		RULE_procedureDeclare = 25, RULE_varModuleDeclare = 26, RULE_functionalDeclareArgList = 27, 
		RULE_functionalDeclareArg = 28, RULE_moduleEntry = 29, RULE_statementSeq = 30, 
		RULE_statement = 31, RULE_simpleStatement = 32, RULE_complexStatement = 33, 
		RULE_declare = 34, RULE_constDeclare = 35, RULE_varDeclare = 36, RULE_scalarDeclare = 37, 
		RULE_arrayDeclare = 38, RULE_ptrDeclare = 39, RULE_arrayDeclareType = 40, 
		RULE_arrayDeclareDimention = 41, RULE_arrayElement = 42, RULE_let = 43, 
		RULE_simpleLet = 44, RULE_arrayLet = 45, RULE_returnVal = 46, RULE_input = 47, 
		RULE_output = 48, RULE_call = 49, RULE_callArgList = 50, RULE_callArg = 51, 
		RULE_callFunc = 52, RULE_ifCond = 53, RULE_whileCond = 54, RULE_repeat = 55, 
		RULE_mathExpression = 56, RULE_mathTerm = 57, RULE_mathFactor = 58, RULE_boolExpression = 59, 
		RULE_boolAnd = 60, RULE_boolEquality = 61, RULE_boolInequality = 62, RULE_boolFactor = 63, 
		RULE_newExp = 64, RULE_ptrExpAtom = 65, RULE_expAtom = 66, RULE_id = 67, 
		RULE_exp = 68, RULE_any = 69;
	public static readonly string[] ruleNames = {
		"typeName", "ptrType", "customType", "scalarType", "simpleType", "arrayType", 
		"arrayDimention", "start", "moduleImportList", "moduleImport", "module", 
		"moduleDeclare", "baseHead", "inheritHead", "classDeclare", "classStatements", 
		"methodDeclare", "thisHeader", "methodFuncAbstract", "methodProcAbstract", 
		"methodFuncDeclare", "methodProcDeclare", "fieldDeclare", "importHeader", 
		"functionDeclare", "procedureDeclare", "varModuleDeclare", "functionalDeclareArgList", 
		"functionalDeclareArg", "moduleEntry", "statementSeq", "statement", "simpleStatement", 
		"complexStatement", "declare", "constDeclare", "varDeclare", "scalarDeclare", 
		"arrayDeclare", "ptrDeclare", "arrayDeclareType", "arrayDeclareDimention", 
		"arrayElement", "let", "simpleLet", "arrayLet", "returnVal", "input", 
		"output", "call", "callArgList", "callArg", "callFunc", "ifCond", "whileCond", 
		"repeat", "mathExpression", "mathTerm", "mathFactor", "boolExpression", 
		"boolAnd", "boolEquality", "boolInequality", "boolFactor", "newExp", "ptrExpAtom", 
		"expAtom", "id", "exp", "any"
	};

	private static readonly string[] _LiteralNames = {
		null, "':'", "';'", "','", "'.'", "'variable'", "'const'", "'length'", 
		"'let'", "'return'", "'input'", "'output'", "'call'", "'readonly'", "'if'", 
		"'then'", "'else'", "'while'", "'repeat'", "'elseif'", "'do'", "'+'", 
		"'-'", "'*'", "'/'", "'%'", "'||'", "'&&'", "'=='", "'!='", "'>'", "'<'", 
		"'>='", "'<='", "'!'", "'module'", "'import'", "'start'", "'end'", "'function'", 
		"'procedure'", "'('", "')'", "'['", "']'", "'{'", "'}'", "':='", "'new'", 
		"'nil'", "'pointer'", "'array'", null, null, "'class'", "'inherit'", "'base'", 
		"'abstract'", "'override'", "'file'", "'uses'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Colon", "Semicolon", "Comma", "Point", "Variable", "Const", "Length", 
		"Let", "Return", "Input", "Output", "Call", "Readonly", "If", "Then", 
		"Else", "While", "Repeat", "Elseif", "Do", "AddOp", "SubOp", "MulOp", 
		"DivOp", "ModOp", "BoolOr", "BoolAnd", "BoolEq", "BoolNeq", "BoolG", "BoolL", 
		"BoolGeq", "BoolLeq", "BoolNot", "ModuleToken", "ImportToken", "Start", 
		"End", "Function", "Procedure", "LBrace", "RBrace", "LSBrace", "RSBrace", 
		"LABrace", "RABrace", "AssignToken", "New", "Nil", "Pointer", "ArrayToken", 
		"FunctionArgModifier", "AccessModifier", "Class", "Inherit", "Base", "Abstract", 
		"Override", "File", "Uses", "SimpleType", "IntValue", "RealValue", "BoolValue", 
		"Id", "StringLiteral", "Comment", "Ws"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SLGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public SLGrammarParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class TypeNameContext : ParserRuleContext {
		public ScalarTypeContext scalarType() {
			return GetRuleContext<ScalarTypeContext>(0);
		}
		public ArrayTypeContext arrayType() {
			return GetRuleContext<ArrayTypeContext>(0);
		}
		public TypeNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeName; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterTypeName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitTypeName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeNameContext typeName() {
		TypeNameContext _localctx = new TypeNameContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_typeName);
		try {
			State = 142;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case Pointer:
			case SimpleType:
			case Id:
				EnterOuterAlt(_localctx, 1);
				{
				State = 140; scalarType();
				}
				break;
			case ArrayToken:
				EnterOuterAlt(_localctx, 2);
				{
				State = 141; arrayType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PtrTypeContext : ParserRuleContext {
		public ITerminalNode Pointer() { return GetToken(SLGrammarParser.Pointer, 0); }
		public ITerminalNode LBrace() { return GetToken(SLGrammarParser.LBrace, 0); }
		public CustomTypeContext customType() {
			return GetRuleContext<CustomTypeContext>(0);
		}
		public ITerminalNode RBrace() { return GetToken(SLGrammarParser.RBrace, 0); }
		public PtrTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ptrType; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterPtrType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitPtrType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPtrType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PtrTypeContext ptrType() {
		PtrTypeContext _localctx = new PtrTypeContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_ptrType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 144; Match(Pointer);
			State = 149;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==LBrace) {
				{
				State = 145; Match(LBrace);
				State = 146; customType();
				State = 147; Match(RBrace);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CustomTypeContext : ParserRuleContext {
		public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public CustomTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_customType; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterCustomType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitCustomType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCustomType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CustomTypeContext customType() {
		CustomTypeContext _localctx = new CustomTypeContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_customType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 151; id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ScalarTypeContext : ParserRuleContext {
		public SimpleTypeContext simpleType() {
			return GetRuleContext<SimpleTypeContext>(0);
		}
		public CustomTypeContext customType() {
			return GetRuleContext<CustomTypeContext>(0);
		}
		public PtrTypeContext ptrType() {
			return GetRuleContext<PtrTypeContext>(0);
		}
		public ScalarTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scalarType; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterScalarType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitScalarType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScalarType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScalarTypeContext scalarType() {
		ScalarTypeContext _localctx = new ScalarTypeContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_scalarType);
		try {
			State = 156;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case SimpleType:
				EnterOuterAlt(_localctx, 1);
				{
				State = 153; simpleType();
				}
				break;
			case Id:
				EnterOuterAlt(_localctx, 2);
				{
				State = 154; customType();
				}
				break;
			case Pointer:
				EnterOuterAlt(_localctx, 3);
				{
				State = 155; ptrType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SimpleTypeContext : ParserRuleContext {
		public ITerminalNode SimpleType() { return GetToken(SLGrammarParser.SimpleType, 0); }
		public SimpleTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_simpleType; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterSimpleType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitSimpleType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSimpleType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SimpleTypeContext simpleType() {
		SimpleTypeContext _localctx = new SimpleTypeContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_simpleType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 158; Match(SimpleType);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArrayTypeContext : ParserRuleContext {
		public ITerminalNode ArrayToken() { return GetToken(SLGrammarParser.ArrayToken, 0); }
		public ScalarTypeContext scalarType() {
			return GetRuleContext<ScalarTypeContext>(0);
		}
		public ArrayDimentionContext[] arrayDimention() {
			return GetRuleContexts<ArrayDimentionContext>();
		}
		public ArrayDimentionContext arrayDimention(int i) {
			return GetRuleContext<ArrayDimentionContext>(i);
		}
		public ArrayTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arrayType; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterArrayType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitArrayType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArrayType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArrayTypeContext arrayType() {
		ArrayTypeContext _localctx = new ArrayTypeContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_arrayType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 160; Match(ArrayToken);
			State = 162;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 161; arrayDimention();
				}
				}
				State = 164;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==LSBrace );
			State = 166; scalarType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArrayDimentionContext : ParserRuleContext {
		public ITerminalNode LSBrace() { return GetToken(SLGrammarParser.LSBrace, 0); }
		public ITerminalNode RSBrace() { return GetToken(SLGrammarParser.RSBrace, 0); }
		public ArrayDimentionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arrayDimention; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterArrayDimention(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitArrayDimention(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArrayDimention(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArrayDimentionContext arrayDimention() {
		ArrayDimentionContext _localctx = new ArrayDimentionContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_arrayDimention);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 168; Match(LSBrace);
			State = 169; Match(RSBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StartContext : ParserRuleContext {
		public ModuleImportListContext moduleImportList() {
			return GetRuleContext<ModuleImportListContext>(0);
		}
		public ModuleContext module() {
			return GetRuleContext<ModuleContext>(0);
		}
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterStart(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitStart(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_start);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 171; moduleImportList();
			State = 172; module();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleImportListContext : ParserRuleContext {
		public ModuleImportContext[] moduleImport() {
			return GetRuleContexts<ModuleImportContext>();
		}
		public ModuleImportContext moduleImport(int i) {
			return GetRuleContext<ModuleImportContext>(i);
		}
		public ModuleImportListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moduleImportList; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterModuleImportList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitModuleImportList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModuleImportList(this);
			else return visitor.VisitChildren(this);
		}
	}
